--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 		<li>Elemento 3</li>
 	</ul>
 	<br><br>
-	<input type="button" value="Haz click aquí" onclick="saludo()"/>
+	<input type="button" value="Haz click aquí" onclick="saludo();"/>
  </body>
 </html>
